# mkapk

./: .gitignore  .gitmodules  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml
.omo/: boulder.json
.omo/notepads/rust-plugin-gui-framework/: learnings.md
.omo/plans/: rust-plugin-gui-framework.md
.omo/run-continuation/: ses_1109ee82dffepjJ0rsePZ9u4S6.json  ses_135f513edffeFut1BWMhwIUVU2.json
crates/gui-aax/: Cargo.toml  build.rs
crates/gui-aax/cpp/: AaxPlugin_Alg.h  AaxPlugin_AlgProc.cpp  AaxPlugin_Describe.cpp  AaxPlugin_Describe.h  AaxPlugin_Parameters.cpp  CMakeLists.txt  gui_aax_bridge.h
crates/gui-aax/examples/: gain.rs
crates/gui-aax/src/: component.rs  lib.rs  page_table.rs
crates/gui-accessibility/: Cargo.toml
crates/gui-accessibility/src/: lib.rs
crates/gui-au/: Cargo.toml
crates/gui-au/examples/: gain.rs
crates/gui-au/src/: component.rs  editor.rs  lib.rs
crates/gui-core/: Cargo.toml
crates/gui-core/src/: accessibility.rs  animation.rs  color.rs  event.rs  geometry.rs  layout.rs  lib.rs  paint.rs  transform.rs  tree.rs  widget.rs
crates/gui-host/: Cargo.toml
crates/gui-host/src/: editor.rs  lib.rs  midi.rs  parameter.rs  processor.rs
crates/gui-mac/: Cargo.toml
crates/gui-mac/src/: accessibility.rs  gpu.rs  image.rs  lib.rs  paint_view.rs  render.rs  text.rs  window.rs
crates/gui-res/: Cargo.toml
crates/gui-res/src/: bundle.rs  generated.rs  id.rs  lib.rs  png.rs
crates/gui-standalone/: Cargo.toml
crates/gui-standalone/src/: lib.rs  main_window.rs
crates/gui-test-host/: Cargo.toml
crates/gui-test-host/examples/: blank.rs  cg-rect.rs  cg-text.rs  d2d-text.rs  gpu-surface.rs
crates/gui-test-host/src/: lib.rs
crates/gui-test-host/src/platform/: mod.rs  win32.rs
crates/gui-vst3/: Cargo.toml
crates/gui-vst3/examples/: gain.rs
crates/gui-vst3/src/: controller.rs  lib.rs  processor.rs  view.rs
crates/gui-widgets/: Cargo.toml
crates/gui-widgets/src/: button.rs  knob.rs  label.rs  lib.rs  slider.rs  theme.rs
crates/gui-win32/: Cargo.toml
crates/gui-win32/src/: gpu.rs  image.rs  lib.rs  render.rs  text.rs  window.rs
crates/mkapk-aax/: Cargo.toml  README.md  build.rs
crates/mkapk-aax/cpp/: AaxPlugin_Alg.h  AaxPlugin_AlgProc.cpp  AaxPlugin_Describe.cpp  AaxPlugin_Parameters.cpp  AaxPlugin_Parameters.h  CMakeLists.txt  aaxval_harness.cpp  mkapk_aax_bridge.h
crates/mkapk-aax/examples/: gain.rs
crates/mkapk-aax/src/: component.rs  lib.rs  page_table.rs
crates/mkapk-accessibility/: Cargo.toml  README.md
crates/mkapk-accessibility/src/: lib.rs
crates/mkapk-au/: Cargo.toml  README.md
crates/mkapk-au/src/: component.rs  editor.rs  lib.rs
crates/mkapk-core/: Cargo.toml  README.md
crates/mkapk-core/benches/: paint_command.rs
crates/mkapk-core/src/: animation.rs  event.rs  transform.rs  units.rs  widget.rs
crates/mkapk-core/src/widgets/: gpu_surface.rs  mod.rs
crates/mkapk-core/tests/: paint_command.rs
crates/mkapk-host/: Cargo.toml  README.md
crates/mkapk-host/src/: editor.rs  meter.rs  midi.rs  processor.rs
crates/mkapk-mac/: Cargo.toml  README.md
crates/mkapk-mac/src/: accessibility.rs  gpu.rs  image.rs  lib.rs  paint_view.rs  render.rs  text.rs  window.rs
crates/mkapk-res/: Cargo.toml  README.md  build.rs
crates/mkapk-res/src/: bundle.rs  id.rs  registry.rs  svg.rs
crates/mkapk-standalone/: Cargo.toml  README.md
crates/mkapk-standalone/src/: device_picker.rs  lib.rs  main_window.rs
crates/mkapk-test-host/: Cargo.toml  README.md
crates/mkapk-test-host/examples/: blank.rs  cg-rect.rs  cg-text.rs  controls.rs  d2d-rect.rs  d2d-text.rs  gpu-surface.rs
crates/mkapk-test-host/src/: lib.rs  main.rs
crates/mkapk-test-host/src/platform/: mac.rs  win32.rs
crates/mkapk-vst3/: Cargo.toml  README.md  build.rs
crates/mkapk-vst3/cpp/: CMakeLists.txt  VstBridge.h  VstController.cpp  VstController.h  VstFactory.cpp  VstProcessor.cpp  VstProcessor.h  VstView.cpp  VstView.h
crates/mkapk-vst3/src/: controller.rs  factory.rs  lib.rs  processor.rs  util.rs  view.rs
crates/mkapk-widgets/: Cargo.toml  README.md
crates/mkapk-widgets/src/: button.rs  knob.rs  label.rs  lib.rs  slider.rs  theme.rs
crates/mkapk-win32/: Cargo.toml  README.md
crates/mkapk-win32/src/: gpu.rs  image.rs  render.rs  text.rs  window.rs
plugins/gain/: Cargo.toml  build.rs
plugins/gain/src/: lib.rs  processor.rs  ui.rs
xtask/: Cargo.toml
xtask/src/: aax.rs  bundle.rs  main.rs  new_plugin.rs  plugin_target.rs  publish.rs  setup.rs  vst3.rs
