[workspace]
members = [
    "crates/gui-core",
    "crates/gui-host",
    "crates/gui-res",
    "crates/gui-accessibility",
    "crates/gui-win32",
    "crates/gui-mac",
    "crates/gui-vst3",
    "crates/gui-au",
    "crates/gui-aax",
    "crates/gui-test-host",
    "crates/gui-widgets",
    "xtask",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Minjae Kim <minjaekim@mkaudio.company>"]
license = "MIT OR Apache-2.0"
description = "Cross-platform retained-mode GUI framework for VST3/AU/AAX audio plugins"
repository = "https://github.com/mkaudio-company/rust-plugin-gui-framework"
documentation = "https://docs.rs/rust-plugin-gui-framework"

[workspace.dependencies]
gui-core = { path = "crates/gui-core" }
gui-host = { path = "crates/gui-host" }
gui-res = { path = "crates/gui-res" }
gui-accessibility = { path = "crates/gui-accessibility" }
gui-mac = { path = "crates/gui-mac" }
gui-test-host = { path = "crates/gui-test-host" }
gui-widgets = { path = "crates/gui-widgets" }
gui-win32 = { path = "crates/gui-win32" }
