[workspace]
members = [
    "crates/gui-core",
    "crates/gui-host",
    "crates/gui-res",
    "crates/gui-accessibility",
    "crates/gui-win32",
    "crates/gui-mac",
    "crates/gui-vst3",
    "crates/gui-au",
    "crates/gui-aax",
    "crates/gui-test-host",
    "crates/gui-widgets",
    "crates/gui-standalone",
    "plugins/gain",
    "xtask",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Minjae Kim <minjaekim@mkaudio.company>"]
license = "MIT OR Apache-2.0"
description = "Cross-platform audio plugin build and packaging system (Standalone/VST3/AU/AAX) with a shared retained-mode GUI framework"
repository = "https://github.com/mkaudio-company/audio-processor-rs"
documentation = "https://docs.rs/audio-processor-rs"

[workspace.dependencies]
gui-core = { path = "crates/gui-core", version = "0.1.0" }
gui-host = { path = "crates/gui-host", version = "0.1.0" }
gui-res = { path = "crates/gui-res", version = "0.1.0" }
gui-accessibility = { path = "crates/gui-accessibility", version = "0.1.0" }
gui-mac = { path = "crates/gui-mac", version = "0.1.0" }
gui-test-host = { path = "crates/gui-test-host", version = "0.1.0" }
gui-widgets = { path = "crates/gui-widgets", version = "0.1.0" }
gui-win32 = { path = "crates/gui-win32", version = "0.1.0" }
gui-standalone = { path = "crates/gui-standalone", version = "0.1.0" }
gui-vst3 = { path = "crates/gui-vst3", version = "0.1.0" }
gui-au = { path = "crates/gui-au", version = "0.1.0" }
gui-aax = { path = "crates/gui-aax", version = "0.1.0" }
