[workspace]
members = [
    "crates/mkapk-core",
    "crates/mkapk-host",
    "crates/mkapk-res",
    "crates/mkapk-accessibility",
    "crates/mkapk-win32",
    "crates/mkapk-mac",
    "crates/mkapk-vst3",
    "crates/mkapk-au",
    "crates/mkapk-aax",
    "crates/mkapk-test-host",
    "crates/mkapk-widgets",
    "crates/mkapk-standalone",
    "plugins/gain",
    "xtask",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Minjae Kim <minjaekim@mkaudio.company>"]
license = "MIT OR Apache-2.0"
description = "Cross-platform audio plugin build and packaging system (Standalone/VST3/AU/AAX) with a shared retained-mode GUI framework"
repository = "https://github.com/mkaudio-company/mkapk"
documentation = "https://docs.rs/mkapk-core"
categories = ["multimedia::audio", "gui", "development-tools::ffi", "os::macos-apis", "api-bindings"]
keywords = ["audio-plugin", "vst3", "au", "aax", "midi"]

[workspace.dependencies]
mkapk-core = { path = "crates/mkapk-core", version = "0.1.0" }
mkapk-host = { path = "crates/mkapk-host", version = "0.1.0" }
mkapk-res = { path = "crates/mkapk-res", version = "0.1.0" }
mkapk-accessibility = { path = "crates/mkapk-accessibility", version = "0.1.0" }
mkapk-mac = { path = "crates/mkapk-mac", version = "0.1.0" }
mkapk-test-host = { path = "crates/mkapk-test-host", version = "0.1.0" }
mkapk-widgets = { path = "crates/mkapk-widgets", version = "0.1.0" }
mkapk-win32 = { path = "crates/mkapk-win32", version = "0.1.0" }
mkapk-standalone = { path = "crates/mkapk-standalone", version = "0.1.0" }
mkapk-vst3 = { path = "crates/mkapk-vst3", version = "0.1.0" }
mkapk-au = { path = "crates/mkapk-au", version = "0.1.0" }
mkapk-aax = { path = "crates/mkapk-aax", version = "0.1.0" }
