[package]
name = "xtask"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
# A workspace-internal build/bundling/CI helper, not a reusable library --
# never meant to be published to crates.io.
publish = false

[dependencies]
