[package]
name = "gui-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[features]
gpu-surface = []

[[bench]]
name = "paint_command"
harness = false
