[package]
name = "gui-mac"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
gui-core = { workspace = true }
gui-host = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26.1"
objc = "0.2.7"
core-graphics = "0.24"
foreign-types = "0.5"
