[package]
name = "gui-res"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
gui-core = { workspace = true }
image = { version = "0.25", default-features = false, features = ["png"] }
resvg = "0.47"
usvg = "0.47"
tiny-skia = "0.12"
