[package]
name = "gui-vst3"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
gui-core = { workspace = true }
gui-host = { workspace = true }
vst3-sys = { git = "https://github.com/RustAudio/vst3-sys", optional = true }

[features]
default = ["vst3"]
vst3 = ["dep:vst3-sys"]

[dev-dependencies]
gui-host = { workspace = true }
gui-res = { workspace = true }
gui-widgets = { workspace = true }

[target.'cfg(target_os = "macos")'.dev-dependencies]
gui-mac = { workspace = true }
gui-test-host = { workspace = true }

[target.'cfg(target_os = "windows")'.dev-dependencies]
gui-win32 = { workspace = true }
gui-test-host = { workspace = true }
