[package]
name = "gui-aax"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
documentation.workspace = true
categories.workspace = true
keywords.workspace = true

[features]
default = []
aax = []

[dependencies]
gui-core = { workspace = true }
gui-host = { workspace = true }

[dev-dependencies]
gui-widgets = { workspace = true }
