[package]
name = "gui-accessibility"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
documentation.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
gui-core = { workspace = true }

[features]
default = []
backend = []

[target.'cfg(target_os = "macos")'.dev-dependencies]
gui-test-host = { workspace = true }
gui-mac = { workspace = true }

[target.'cfg(target_os = "windows")'.dev-dependencies]
gui-win32 = { workspace = true }
