[package]
name = "mkapk-accessibility"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
documentation.workspace = true
categories.workspace = true
keywords.workspace = true
readme = "README.md"

[dependencies]
mkapk-core = { workspace = true }

[features]
default = []
backend = []

[target.'cfg(target_os = "macos")'.dev-dependencies]
mkapk-test-host = { workspace = true }
mkapk-mac = { workspace = true }

[target.'cfg(target_os = "windows")'.dev-dependencies]
mkapk-win32 = { workspace = true }
