[package]
name = "mkapk-au"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
documentation.workspace = true
categories.workspace = true
keywords.workspace = true
readme = "README.md"

[features]
default = ["au"]
au = []

[dependencies]
mkapk-core = { workspace = true }
mkapk-host = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
au-sys = "0.1.1"
cocoa = "0.26.1"
objc = "0.2.7"
core-foundation = "0.10.0"

[dev-dependencies]
mkapk-widgets = { workspace = true }
