[package]
name = "mkapk-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
documentation.workspace = true
categories.workspace = true
keywords.workspace = true
readme = "README.md"

[dependencies]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[features]
gpu-surface = []

[[bench]]
name = "paint_command"
harness = false
