[package]
name = "mkapk-mac"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
documentation.workspace = true
categories.workspace = true
keywords.workspace = true
readme = "README.md"

[dependencies]
mkapk-core = { workspace = true }
mkapk-host = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26.1"
objc = "0.2.7"
core-foundation = "0.10"
core-graphics = "0.24"
core-text = "21.0"
foreign-types = "0.5"

[features]
gpu-surface = ["mkapk-core/gpu-surface"]
