[package]
name = "mkapk-res"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
documentation.workspace = true
categories.workspace = true
keywords.workspace = true
readme = "README.md"

[dependencies]
mkapk-core = { workspace = true }
image = { version = "0.25", default-features = false, features = ["png"] }
resvg = "0.47"
usvg = "0.47"
tiny-skia = "0.12"
