[package]
name = "mkapk-standalone"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
documentation.workspace = true
categories.workspace = true
keywords.workspace = true
readme = "README.md"

[dependencies]
mkapk-core = { workspace = true }
mkapk-host = { workspace = true }
mkapk-test-host = { workspace = true }
cpal = "0.15"
ringbuf = "0.5"
# Real MIDI input, same reasoning as cpal for audio: device enumeration and
# per-OS driver quirks (CoreMIDI/WinMM/ALSA) are real risk to hand-roll
# blind, so this leans on a mature, widely-used crate instead.
midir = "0.10"

# Device-picker UI (macOS only for now: mkgraphic's cross-platform Window/App
# facade doesn't wire up Windows yet as of 0.3.0, even though platform code
# for it exists in the crate).
[target.'cfg(target_os = "macos")'.dependencies]
mkgraphic = "0.3.1"
cocoa = "0.26.1"
objc = "0.2.7"
objc2 = "0.5"
objc2-foundation = "0.2"
objc2-app-kit = { version = "0.2", features = ["NSApplication"] }
