[package]
name = "mkapk-test-host"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
documentation.workspace = true
categories.workspace = true
keywords.workspace = true

[lib]
name = "mkapk_test_host"
path = "src/lib.rs"

[[bin]]
name = "mkapk-test-host"
path = "src/main.rs"

[dependencies]
mkapk-core = { workspace = true }
mkapk-host = { workspace = true }
mkapk-mac = { workspace = true }
mkapk-win32 = { workspace = true }
mkapk-widgets = { workspace = true }

[dev-dependencies]
mkapk-accessibility = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62.2", default-features = false, features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_System_LibraryLoader", "Win32_Graphics_Gdi"] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26.1"
objc = "0.2.7"
core-graphics = "0.24.0"

[features]
gpu-surface = ["mkapk-core/gpu-surface", "mkapk-mac/gpu-surface", "mkapk-win32/gpu-surface"]

[[example]]
name = "gpu-surface"
required-features = ["gpu-surface"]
