[package]
name = "mkapk-vst3"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
documentation.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
mkapk-core = { workspace = true }
mkapk-host = { workspace = true }
vst3-sys = { git = "https://github.com/RustAudio/vst3-sys", optional = true }
vst3-com = { git = "https://github.com/RustAudio/vst3-sys", optional = true }

[features]
default = ["vst3"]
vst3 = ["dep:vst3-sys", "dep:vst3-com"]
