[package]
name = "mkapk-vst3"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
documentation.workspace = true
categories.workspace = true
keywords.workspace = true
readme = "README.md"
# a crate installed from crates.io always builds as a view-only stub (see `build.rs`),
# and the real SDK-linked entry point only exists when building from a git checkout with
# `git submodule update --init` run.
exclude = ["thirdparty/"]

[dependencies]
mkapk-core = { workspace = true }
mkapk-host = { workspace = true }

[features]
default = ["vst3"]
vst3 = []
