[package]
name = "mkapk-widgets"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
documentation.workspace = true
categories.workspace = true
keywords.workspace = true
readme = "README.md"

[dependencies]
mkapk-core = { workspace = true }
mkapk-host = { workspace = true }
