[package]
name = "gain-plugin"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
# The reference/template plugin `cargo xtask new-plugin` copies from, not a
# reusable library in its own right -- never meant to be published to
# crates.io under this name.
publish = false

[lib]
name = "gain_plugin"
crate-type = ["cdylib", "staticlib", "rlib"]

[[bin]]
name = "gain-standalone"
path = "src/bin/standalone.rs"
required-features = ["standalone"]

[[bin]]
name = "gain-aax-page-table"
path = "src/bin/aax_page_table.rs"
required-features = ["aax"]

[[bin]]
name = "gain-au-info"
path = "src/bin/au_info.rs"
required-features = ["au"]

[features]
default = []
standalone = ["dep:gui-standalone"]
vst3 = ["dep:gui-vst3"]
au = ["dep:gui-au"]
aax = ["dep:gui-aax"]

[dependencies]
gui-core = { workspace = true }
gui-host = { workspace = true }
gui-res = { workspace = true }
gui-widgets = { workspace = true }
gui-standalone = { workspace = true, optional = true }
gui-vst3 = { workspace = true, optional = true }
gui-au = { workspace = true, optional = true }
gui-aax = { workspace = true, optional = true, features = ["aax"] }

[target.'cfg(target_os = "macos")'.dependencies]
gui-mac = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
gui-win32 = { workspace = true }
