[package]
name = "gain-plugin"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
# The reference/template plugin `cargo xtask new-plugin` copies from, not a
# reusable library in its own right -- never meant to be published to
# crates.io under this name.
publish = false

[lib]
name = "gain_plugin"
crate-type = ["cdylib", "staticlib", "rlib"]

[[bin]]
name = "gain-standalone"
path = "src/bin/standalone.rs"
required-features = ["standalone"]

[[bin]]
name = "gain-aax-page-table"
path = "src/bin/aax_page_table.rs"
required-features = ["aax"]

[[bin]]
name = "gain-au-info"
path = "src/bin/au_info.rs"
required-features = ["au"]

[features]
default = []
standalone = ["dep:mkapk-standalone"]
vst3 = ["dep:mkapk-vst3"]
au = ["dep:mkapk-au"]
aax = ["dep:mkapk-aax"]

[dependencies]
mkapk-core = { workspace = true }
mkapk-host = { workspace = true }
mkapk-res = { workspace = true }
mkapk-widgets = { workspace = true }
mkapk-standalone = { workspace = true, optional = true }
mkapk-vst3 = { workspace = true, optional = true }
mkapk-au = { workspace = true, optional = true }
mkapk-aax = { workspace = true, optional = true, features = ["aax"] }

[target.'cfg(target_os = "macos")'.dependencies]
mkapk-mac = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
mkapk-win32 = { workspace = true }
